--- a/openshift-deployment.yaml
+++ b/openshift-deployment.yaml
@@ -19,7 +19,7 @@ spec:
       - name: quay-pull-secret
       containers:
       - name: smolvlm-demo
-        image: quay.io/rh_ee_micyang/smolvlm-realtime-demo-amd64:latest
+        image: quay.io/rh_ee_micyang/smolvlm-realtime-demo-amd64:0.1
         ports:
         - containerPort: 80
           name: web
